fixed width squishing problem

--- a/css.css
+++ b/css.css
@@ -30,7 +30,7 @@ body {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  width: 20%;
+  width: 10cm;
   margin-left: 2%;
 }
 
